touch injector