@@ -8,12 +8,34 @@ public class TouchInjector {
 
     public static Vector<String> rebaseArguments(Vector<String> args) {
         Vector<String> newArgs = new Vector<>();
-        if (args.contains("Forge") || args.contains("fmlclient")) {
-            for (int i = 0; i < args.size(); i++) {
-                if (args.get(i).startsWith("-Xms")) {
-                    newArgs.add("-javaagent:" + AppManifest.PLUGIN_DIR + "/touch/TouchInjector.jar=forge");
+        if (args.contains("Forge") || args.contains("cpw.mods.fml.common.launcher.FMLTweaker") || args.contains("fmlclient") || args.contains("forgeclient")) {
+            if (args.contains("cpw.mods.bootstraplauncher.BootstrapLauncher")) {
+                boolean hit = false;
+                for (int i = 0; i < args.size(); i++) {
+                    if (hit) {
+                        newArgs.add(args.get(i) + ":" + AppManifest.PLUGIN_DIR + "/touch/TouchInjector.jar");
+                        hit = false;
+                    }
+                    else if (args.get(i).equals("cpw.mods.bootstraplauncher.BootstrapLauncher")) {
+                        newArgs.add("--add-exports=cpw.mods.bootstraplauncher/cpw.mods.bootstraplauncher=ALL-UNNAMED");
+                        newArgs.add("com.tungsten.touchinjector.launch.TouchBootstrapLauncher");
+                    }
+                    else if (args.get(i).equals("-cp")) {
+                        hit = true;
+                        newArgs.add(args.get(i));
+                    }
+                    else {
+                        newArgs.add(args.get(i));
+                    }
                 }
-                newArgs.add(args.get(i));
+            }
+            else {
+                for (int i = 0; i < args.size(); i++) {
+                    if (args.get(i).startsWith("-Xms")) {
+                        newArgs.add("-javaagent:" + AppManifest.PLUGIN_DIR + "/touch/TouchInjector.jar=forge");
+                    }
+                    newArgs.add(args.get(i));
+                }
             }
             return newArgs;
         }
@@ -34,7 +56,7 @@ public class TouchInjector {
                     hit = false;
                 }
                 else if (args.get(i).equals("net.fabricmc.loader.impl.launch.knot.KnotClient")) {
-                    newArgs.add("com.tungsten.touchinjector.TouchKnotClient");
+                    newArgs.add("com.tungsten.touchinjector.launch.TouchKnotClient");
                 }
                 else if (args.get(i).equals("-cp")) {
                     hit = true;
